all men must die practice completed

--- a/demo-tag-basics/index.html
+++ b/demo-tag-basics/index.html
@@ -24,7 +24,7 @@
     refered to as a self closing tag (or a void tag)
     Paramerters
         src="relative web site location"
-        alt="pritable text if img not found"
+        alt="printable text if img not found"
         [titles="tool tip text for img"]
 
         the relative path is from the top of your website down to the item you wish to reference
