--- a/demo-tag-basics/index.html
+++ b/demo-tag-basics/index.html
@@ -3,21 +3,22 @@
 
 <head>
 
-<title>Markup Demo</title>
-<meta name="author" context="Leo Cronin-Barrow">
+    <title>Markup Demo</title>
+    <meta name="author" content="Leo Cronin-Barrow">
 
-<meta charset="utf-8">
+    <meta charset="utf-8">
 </head>
+
 <body>
     <h1>Markup Demo</h1>
     <p>There are many ways to make a presence on the web and a website is just one of them. Other types of
-         web presence include social media channels and sites that allow customers to review your business.
-          Before you start making a website, make sure you understand what’s provided by the different types of 
-          web presence and the costs and benefits associated with each type.</p>
+        web presence include social media channels and sites that allow customers to review your business.
+        Before you start making a website, make sure you understand what’s provided by the different types of
+        web presence and the costs and benefits associated with each type.</p>
     <h3>Try Photoshop</h3>
-    <p>Photoshop is part of Creative Cloud and comes with Adobe CreativeSync, so your assets are always at your 
+    <p>Photoshop is part of Creative Cloud and comes with Adobe CreativeSync, so your assets are always at your
         fingertips right when you need them. CreativeSync powers your Creative Cloud Libraries and Adobe Stock,
-         and it connects your mobile and desktop apps.</p>
+        and it connects your mobile and desktop apps.</p>
     <a href="http://www.adobe.com/products/photoshop.html" target="_blank">Download Trial version</a>
     <h3></h3>
     <!--Image tag does not have a closing tag
@@ -33,18 +34,18 @@
     -->
     <img src="img/photoshop.jpg" alt="photoshop logo" title="adobe photoshop logo">
     <h3>Quality guidelines</h3>
-    <p>These quality guidelines cover the most common forms of deceptive or manipulative behaviour, 
+    <p>These quality guidelines cover the most common forms of deceptive or manipulative behaviour,
         but Google may respond negatively to other misleading practices not listed here. It's not safe to
-         assume that just because a specific deceptive technique isn't included on this page, Google
-          approves of it. Webmasters who spend their energies upholding the spirit of the basic principles 
-          will provide a much better user experience and subsequently enjoy better ranking than those who
-           spend their time looking for loopholes they can exploit.</p>
+        assume that just because a specific deceptive technique isn't included on this page, Google
+        approves of it. Webmasters who spend their energies upholding the spirit of the basic principles
+        will provide a much better user experience and subsequently enjoy better ranking than those who
+        spend their time looking for loopholes they can exploit.</p>
     <h3>Champions League Quarter Finals</h3>
     <p>A strange enough start, though. Mitroglou prances down the Benficaright and fires a low cross into
-         the Bayern box. It’s a decent delivery, but there’s nobody there to take a shot on goal. Bayern 
-         clear, and Ribery dances down the left again. He feeds Douglas Costa down the channel. Douglas 
-         Costa stands one up to the far post, and Vidal heads home into the right-hand portion of the net
-          with the greatest of ease from six yards!</p>
+        the Bayern box. It’s a decent delivery, but there’s nobody there to take a shot on goal. Bayern
+        clear, and Ribery dances down the left again. He feeds Douglas Costa down the channel. Douglas
+        Costa stands one up to the far post, and Vidal heads home into the right-hand portion of the net
+        with the greatest of ease from six yards!</p>
     <ul>
         <li>Barcelona</li>
         <li>Manchester United</li>
@@ -52,5 +53,21 @@
         <li>Paris St Germain</li>
         <li>Wolfsburg</li>
     </ul>
+
+    <!--Another way to display an image is using the figure tag along with the figcaption tag
+    the figure tag will indent your image while the fig caption tag will allow you to place
+    a text line with your image
+    the figcaption tag is optional -->
+
+    <figure><img scr="img/photoshop.jpg" alt="photoshop logo" title="this is a tool tip">
+        <figcaption>Note where this caption text for the image appears</figcaption>
+    </figure>
+
+    <!--using an image anchor for your page-->
+    <a href="https://www.redbubble.com/i/sticker/he-him-mlm-d20-by-discordantego/89705076.EJUG5" \ target=_blank>
+        <img src="img/photoshop.jpg" alt="photoshop symbol" title="go to my website">
+    </a>
+
 </body>
+
 </html>
