--- a/framework/index.html
+++ b/framework/index.html
@@ -3,12 +3,22 @@
 
 <head>
 
-<title>on the page title</title>
-<meta name="author" context="Leo Cronin-Barrow">
+    <title>on the page title</title>
+    <meta name="author" context="Leo Cronin-Barrow">
 
-<meta charset="utf-8">
+    <meta charset="utf-8">
 </head>
-<body>
 
+<body>
+    <header>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
